tests/corpus/negative/N06-exception/source.py
def guarded(value):
    try:
        return 10 // value
    except ZeroDivisionError:
        return 0

